--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
