--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
     "axios": "^1.7.9",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
