--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
+    "@hookform/resolvers": "^5.0.1",
     "axios": "^1.7.9",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-spinners": "^0.16.1",
+    "react-toastify": "^11.0.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
